testdata/baselines/reference/submodule/conformance/importTag19.errors.txt
b.js(7,12): error TS4078: Parameter 'a' of exported function has or is using private name 'Foo'.


==== a.ts (0 errors) ====
    export interface Foo {}
    
==== b.js (1 errors) ====
    /**
     * @import { Foo }
     * from "./a"
     */
    
    /**
     * @param {Foo} a
               ~~~
!!! error TS4078: Parameter 'a' of exported function has or is using private name 'Foo'.
     */
    export function foo(a) {}
    